--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 server.port=9090
 spring.jpa.hibernate.ddl-auto=update
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
